// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Article /> renders properly 1`] = `
.c1 {
  box-shadow: none;
  text-decoration: none;
  font-size: 36px;
  margin: 0;
  font-weight: 700;
}

.c1:hover,
.c1:focus {
  border-bottom: 1px solid undefined;
  outline: none;
}

.c3 {
  display: flex;
  flex-wrap: wrap;
  padding: 0;
  margin: 0;
}

.c4 {
  list-style: none;
  padding: 0 10px 0 0;
}

.c5 {
  text-decoration: none;
  box-shadow: none;
  font-size: 16px;
  font-weight: 700;
  text-transform: lowercase;
}

.c5:hover,
.c5:focus {
  border-bottom: 1px solid;
  outline: none;
}

.c0 {
  margin: 20px 0 60px 0;
  font-weight: 400;
}

.c2 {
  font-size: 19px;
  margin: 10px 0;
}

<body>
  <div>
    <article
      class="c0"
      data-testid="article-item"
    >
      <a
        class="c1"
        data-testid="title"
        href="/awesome-article"
      >
        Awesome Article
      </a>
      <p
        class="c2"
      >
        01/18/2020
         
        · 5 minutes of reading
         · In 
        en
      </p>
      <ul
        class="c3"
        data-testid="taglist-list"
      >
        <li
          class="c4"
          data-testid="taglist-item"
        >
          <a
            class="c5"
            href="/tags/jest"
          >
            #jest
          </a>
        </li>
        <li
          class="c4"
          data-testid="taglist-item"
        >
          <a
            class="c5"
            href="/tags/testing-library"
          >
            #testing-library
          </a>
        </li>
      </ul>
    </article>
  </div>
</body>
`;

exports[`<Article /> renders properly the body content 1`] = `
.c1 {
  box-shadow: none;
  text-decoration: none;
  font-size: 36px;
  margin: 0;
  font-weight: 700;
}

.c1:hover,
.c1:focus {
  border-bottom: 1px solid undefined;
  outline: none;
}

.c2 {
  line-height: 1.5;
  font-size: 19px;
  margin-top: 10px;
}

.c2 a {
  text-decoration: none;
  border-bottom: 1px solid;
}

.c2 a:hover,
.c2 a:focus {
  border-bottom: 1px solid;
  outline: none;
}

.c2 code {
  background: 40;
  padding: 2px 6px;
  border-radius: 10px;
  font-size: 16px;
}

.c2 blockquote {
  border-left: 5px solid;
  padding-left: 20px;
  margin-left: 0;
}

.c2 img {
  box-shadow: none!important;
}

.c2 h3 {
  font-size: 28px;
}

.c2 table.uses-table {
  width: 100%;
  margin: 40px 0;
}

.c2 table.uses-table td {
  text-align: center;
}

.c0 {
  margin: 20px 0 60px 0;
  font-weight: 400;
}

<body>
  <div>
    <article
      class="c0"
      data-testid="article-item"
    >
      <a
        class="c1"
        data-testid="title"
        href="/awesome-article"
      >
        Awesome Article
      </a>
      <section
        class="c2"
        html="Article as a Children"
      >
        Article as a Children
      </section>
    </article>
  </div>
</body>
`;

exports[`<Article /> renders properly the description 1`] = `
.c1 {
  box-shadow: none;
  text-decoration: none;
  font-size: 36px;
  margin: 0;
  font-weight: 700;
}

.c1:hover,
.c1:focus {
  border-bottom: 1px solid undefined;
  outline: none;
}

.c2 {
  line-height: 1.5;
  font-size: 19px;
  margin-top: 10px;
}

.c2 a {
  text-decoration: none;
  border-bottom: 1px solid;
}

.c2 a:hover,
.c2 a:focus {
  border-bottom: 1px solid;
  outline: none;
}

.c2 code {
  background: 40;
  padding: 2px 6px;
  border-radius: 10px;
  font-size: 16px;
}

.c2 blockquote {
  border-left: 5px solid;
  padding-left: 20px;
  margin-left: 0;
}

.c2 img {
  box-shadow: none!important;
}

.c2 h3 {
  font-size: 28px;
}

.c2 table.uses-table {
  width: 100%;
  margin: 40px 0;
}

.c2 table.uses-table td {
  text-align: center;
}

.c0 {
  margin: 20px 0 60px 0;
  font-weight: 400;
}

<body>
  <div>
    <article
      class="c0"
      data-testid="article-item"
    >
      <a
        class="c1"
        data-testid="title"
        href="/awesome-article"
      >
        Awesome Article
      </a>
      <section
        class="c2"
        html="Article as a Children"
      >
        Article as a Children
      </section>
    </article>
  </div>
</body>
`;
